# 2026_SionnaMeasurementSim

./: .gitignore  README.md  pyproject.toml
artifacts/phase_reports/: phase_0_acceptance.md  phase_1_acceptance.md  phase_2_acceptance.md  phase_3_acceptance.md  phase_4_acceptance.md  phase_5_acceptance.md  phase_6_acceptance.md  phase_7_acceptance.md  phase_8_acceptance.md
config/: README.md
config/defaults/: cfr_truth_only.yaml  iq_link_library_nr_srs.yaml  measurement_mvp.yaml  nr_pusch_indoor_positioning_fr1_100mhz.yaml  nr_pusch_mvp.yaml  nr_srs_indoor_positioning_fr1_100mhz.yaml  rt_labels_only.yaml
config/perf/: hdf5_bundle_append_smoke.yaml  nr_pusch_3x3000_sharded.yaml  nr_pusch_6x8884_sharded.yaml  nr_srs_6x20_debug_sharded.yaml  (+5 more)
data/: README.md
docs/: 00_global_constraints_and_official_references.md  01_system_goals_and_scope.md  02_architecture.md  03_data_contract_hdf5.md  04_sionna_rt_adapter_and_path_data.md  05_phy_observation_and_impairments.md  06_config_and_experiment_schema.md  07_project_layout_uv_git_workflow.md  08_roadmap_milestones_acceptance.md  09_testing_and_quality_gates.md  10_old_system_reuse_and_migration.md  11_calibration_and_diagnostics.md  12_final_acceptance_checklist.md  13_tdd_reciprocity_nr_pusch_phy_plan.md  14_rt_hardening_before_nr_pusch.md  15_mimo_phy_gap_analysis.md  README.md  USER_GUIDE.md  agent_handoff.md  aoa_spatial_spectrum_alignment_analysis.md  development_workflow_reference.md  phase_progress.md  review.md
scripts/: README.md  compare_phy_csi_outputs.py  compare_srs_rt_variants.py  plot_cfr_similarity_by_position.py  plot_cfr_similarity_exclude_region.py  plot_cfr_similarity_floorplan_heatmaps.py  plot_normalized_cfr_similarity_heatmaps.py  plot_radio_map_heatmaps.py  plot_ue_bs_radio_map.py  run_srs_rt_variant_micro_sweep.py  summarize_ranging_observation.py  summarize_srs_resource_observation.py  write_phase1_fixture.py
sionna_measurement_sim/: __init__.py  perf.py
(+189 files in other folders)
